[package]
name = "disponent"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", optional = true, features = ['rt'] }

tracing = "0.1.36"

async-stream = "0.3.3"
futures = "0.3.23"
futures-channel = "0.3.24"
serde = "1.0.143"
time = "0.3.13"
error-stack = { version = "0.1.1" }
uuid = { version = "1.1.2", features = ['v4'] }
async-trait = "0.1.57"

rmpv = { version = "1.0.0", features = ['with-serde'] }
rmp-serde = { version = "1.1.0" }

lapin = { version = "2.1.1", optional = true }
deadpool = { version = "0.9.5", optional = true }
deadpool-lapin = { version = "0.10.0", optional = true }

[features]
rabbitmq = ['dep:lapin', 'dep:deadpool', 'dep:deadpool-lapin']
redis = []
tokio = ['dep:tokio']