[package]
name = "disponent"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", optional = true, features = ['rt'] }

tracing = "0.1.36"
error-stack = { git = "https://github.com/hashintel/hash.git" }

async-trait = "0.1.57"
futures = "0.3.23"
futures-channel = "0.3.24"

serde = { version = "1.0.143", features = ['derive'] }
time = { version = "0.3.13", features = ['serde'] }
uuid = { version = "1.1.2", features = ['v4', 'serde'] }

rmpv = { version = "1.0.0", features = ['with-serde'] }
rmp-serde = { version = "1.1.0" }

lapin = { version = "2.1.1", optional = true }
deadpool = { version = "0.9.5", optional = true }
deadpool-lapin = { version = "0.10.0", optional = true }

redis = { version = "0.21.6", optional = true }
deadpool-redis = { version = "0.10.2", optional = true }

[features]
default = ['redis', 'tokio', 'rabbitmq']
rabbitmq = ['dep:lapin', 'dep:deadpool', 'dep:deadpool-lapin']
redis = ['dep:redis', 'dep:deadpool', 'dep:deadpool-redis']
tokio = ['dep:tokio', 'redis?/tokio-comp']

[dev-dependencies]
tokio = { version = "1.21.0", features = ['test-util', 'macros'] }
tracing-subscriber = { version = "0.3.15", features = ['fmt'] }